# ai-incident-commander

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  incident-simulation.md
.github/workflows/: ci.yml  publish.yml  security.yml
data/raw/openrca2/batch-01KQHDBB5Y8K69Z13G7VSWG9FS/: abnormal_logs.parquet  causal_graph.json  conclusion.parquet  env.json  injection.json
data/raw/openrca2/batch-01KQHDBBFCJTTJNJV624R7GPT3/: abnormal_logs.parquet  causal_graph.json  conclusion.parquet  env.json  injection.json
data/raw/openrca2/batch-01KQHKEKR8H3EYW6JE5HB9XFJX/: abnormal_logs.parquet  causal_graph.json  conclusion.parquet  env.json  (+1 more)
data/raw/opensre/: README.md  hud_trajectories.jsonl
docs/: PRD.md  SPEC.md  api-reference.md  architecture.md  coe-format.md  field-test-results.md  input-format.md  llm-strategy.md  output-format.md  real-data-test-plan.md  safety-guardrails.md  simulation-guide.md  v0.2.0-recommendations.md  wbs.md
scripts/: convert_incidents.py  generate_field_test_report.py  run_field_tests.py
src/incident_commander/: __init__.py  api.py  cli.py  config.py  graph.py  llm_router.py  persistence.py  schema.py
src/incident_commander/ingest/: __init__.py  input_dir.py  log_parser.py  normalizer.py  notes_parser.py
src/incident_commander/models/: __init__.py  input.py  output.py  state.py
src/incident_commander/nodes/: __init__.py  _llm.py  cadence.py  cost_report.py  deploy_correlation.py  postmortem.py  rag.py  remediation.py  rerank.py  stakeholder.py  timeline.py
src/incident_commander/output/: __init__.py  comms_blocks.py  formatters.py  markdown_writer.py
src/incident_commander/simulation/: __init__.py  demo_runbooks.py  scenarios.py  simulator.py
tests/: __init__.py  conftest.py
tests/e2e/: test_auto_approve.py  test_cli.py  test_cost_tracking.py  test_e2e_simulated_incident.py  test_input_dir.py  test_output_dir.py
tests/fixtures/: alert.json  bad_alert.json
tests/fixtures/incident-2026-001/: alert.json  github.json  messages.json  meta.json  notes.md
tests/integration/: test_api.py  test_comms.py  test_cost.py  test_full_graph.py  test_postmortem.py  test_remediation.py
tests/real_data/: __init__.py  test_real_incidents.py
tests/unit/: test_cadence.py  test_comms_blocks.py  test_config.py  test_deploy_correlation.py  test_formatters.py  test_graph.py  test_input_dir.py  test_llm_router.py  test_log_parser.py  test_models.py  test_normalizer.py  test_notes_parser.py  test_output_writer.py  test_persistence.py  test_postmortem_unit.py  test_rag.py  test_remediation.py  test_rerank.py  test_schema.py  test_simulation.py  test_stakeholder.py  test_timeline.py
(+763 files in other folders)
