[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/incident_commander"]

[project]
name = "ai-incident-commander"
version = "0.1.0"
description = "AI incident commander — war rooms, timelines, remediations, and postmortems"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Debashish Ghosal"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langgraph>=0.3",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
rag = ["qdrant-client>=1.13"]
openai = ["openai>=1.0", "langchain-openai>=0.3"]
anthropic = ["anthropic>=0.30"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pip-audit>=2.7",
    "pip-licenses>=4.3",
    "build>=1.0",
    "twine>=5.0",
    "pyarrow>=14.0",
]
all = [
    "ai-incident-commander[rag,openai,anthropic,dev]",
]

[project.urls]
Homepage = "https://github.com/deghosal-2026/ai-incident-commander"
Repository = "https://github.com/deghosal-2026/ai-incident-commander"
Issues = "https://github.com/deghosal-2026/ai-incident-commander/issues"
Documentation = "https://github.com/deghosal-2026/ai-incident-commander#readme"
Changelog = "https://github.com/deghosal-2026/ai-incident-commander/releases"

[project.scripts]
incident-commander = "incident_commander.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["data/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "D", "ANN"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D100", "D101", "D103", "ANN001", "ANN201", "ANN202", "F401"]
"scripts/*" = ["D103", "ANN201", "ANN202", "E501", "E701"]

[tool.mypy]
strict = true
python_version = "3.11"
disable_error_code = ["unused-ignore"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "unit: Unit tests (fast, no external deps)",
    "integration: Integration tests (may need LLM or Qdrant)",
    "e2e: End-to-end tests (full pipeline)",
    "real_data: Tests with real-world incident data",
]

[tool.coverage.report]
fail_under = 80
